# clihub

./: .gitignore  README.en.md  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: publish.yml
src/: App.css  App.tsx  main.tsx  types.ts  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  node_runtime.rs  process_utils.rs  sessions.rs  state.rs  tools.rs
src/components/: AppIcon.tsx  CliPickerModal.tsx  HelpModal.tsx  InspectorPanel.tsx  NavigationRail.tsx  Sidebar.tsx  TerminalWorkbench.tsx  WindowTitlebar.tsx
src/lib/: api.ts
