[package]
name = "clihub"
version = "0.1.5"
description = "A multi-session desktop manager for CLI coding agents."
authors = ["CliHub"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clihub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tar = "0.4"
toml = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
which = "8.0"
xz2 = "0.1"
zip = { version = "4.2", default-features = false, features = ["deflate"] }
